tests/backpack/should_fail/T23342.stderr
[1 of 3] Processing p
  [1 of 1] Compiling H[sig]           ( p\H.hsig, nothing )
[2 of 3] Processing q
  Instantiating q
  [1 of 1] Compiling H                ( q\H.hs, T23342.out\q\H.o )
[3 of 3] Processing r
  Instantiating r
  [1 of 2] Including q
  [2 of 2] Including p[H=q:H]
    Instantiating p[H=q:H]
    [1 of 1] Compiling H[sig]           ( p\H.hsig, T23342.out\p\p-D5Mg3foBSCrDbQDKH4WGSG\H.o )

T23342.bkp:14:5: error: [GHC-15843]
    • Type constructor ‘T1’ has conflicting definitions in the module
      and its hsig file.
      Main module: type T1 :: *
                   type T1 = forall a. a -> a
        Hsig file: type T1 :: *
                   data T1
      Illegal implementation of abstract data:
        Invalid polymorphic type: forall a. a -> a.
    • While checking that ‘q:H’ implements signature ‘H’ in ‘p[H=q:H]’.

T23342.bkp:15:5: error: [GHC-15843]
    • Type constructor ‘T2’ has conflicting definitions in the module
      and its hsig file.
      Main module: type T2 :: *
                   type T2 = forall a. C a => a
        Hsig file: type T2 :: *
                   data T2
      Illegal implementation of abstract data:
        Invalid polymorphic type: forall a. C a => a.
    • While checking that ‘q:H’ implements signature ‘H’ in ‘p[H=q:H]’.

T23342.bkp:16:5: error: [GHC-15843]
    • Type constructor ‘T3’ has conflicting definitions in the module
      and its hsig file.
      Main module: type T3 :: *
                   type T3 = C S => S -> S
        Hsig file: type T3 :: *
                   data T3
      Illegal implementation of abstract data:
        Invalid qualified type: C S => S -> S.
    • While checking that ‘q:H’ implements signature ‘H’ in ‘p[H=q:H]’.
